--- a/packages/remix/package.json
+++ b/packages/remix/package.json
@@ -23,9 +23,9 @@
     "defaults"
   ],
   "dependencies": {
-    "@vercel/error-utils": "2.0.3",
+    "@vercel/error-utils": "workspace:*",
     "@vercel/nft": "1.1.1",
-    "@vercel/static-config": "3.1.2",
+    "@vercel/static-config": "workspace:*",
     "path-to-regexp-updated": "npm:path-to-regexp@6.3.0",
     "path-to-regexp": "6.1.0",
     "ts-morph": "12.0.0"
@@ -34,7 +34,7 @@
     "@types/jest": "27.5.1",
     "@types/node": "14.18.33",
     "@types/semver": "7.3.13",
-    "@vercel/build-utils": "13.2.2",
+    "@vercel/build-utils": "workspace:*",
     "glob": "10.3.16",
     "jest-junit": "16.0.0",
     "semver": "7.5.2",
