Upgrade pnpm, introduce catalogs

--- a/packages/backends/package.json
+++ b/packages/backends/package.json
@@ -28,7 +28,7 @@
   ],
   "dependencies": {
     "@vercel/cervel": "workspace:*",
-    "@vercel/nft": "1.1.1",
+    "@vercel/nft": "catalog:",
     "@vercel/static-config": "workspace:*",
     "@vercel/introspection": "workspace:*",
     "fs-extra": "11.1.0",
