--- a/packages/introspection/package.json
+++ b/packages/introspection/package.json
@@ -40,7 +40,7 @@
     "@types/jest": "27.5.1",
     "@vercel/cervel": "workspace:*",
     "@vercel/static-config": "workspace:*",
-    "@vercel/nft": "1.1.1",
+    "@vercel/nft": "catalog:",
     "@types/node": "22",
     "fs-extra": "11.1.0",
     "@vercel/build-utils": "workspace:*",
