--- a/packages/redwood/package.json
+++ b/packages/redwood/package.json
@@ -17,7 +17,7 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@vercel/nft": "1.1.1",
+    "@vercel/nft": "catalog:",
     "@vercel/static-config": "workspace:*",
     "semver": "6.3.1",
     "ts-morph": "12.0.0"
