--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -3,11 +3,12 @@
   "version": "0.0.23",
   "description": "A TypeScript SDK for programmatically configuring Vercel projects",
   "bugs": {
-    "url": "https://github.com/vercel/config/issues"
+    "url": "https://github.com/vercel/vercel/issues"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/vercel/config"
+    "url": "https://github.com/vercel/vercel.git",
+    "directory": "packages/config"
   },
   "author": "Vercel",
   "license": "MIT",
@@ -37,29 +38,19 @@
   ],
   "scripts": {
     "build": "tsc",
-    "format": "prettier --write \"src/**/*.ts\"",
     "generate-types": "tsx scripts/generate-types.ts",
-    "lint": "eslint . --ext .ts",
-    "release": "npm run build && changeset publish",
-    "test": "vitest",
-    "version-packages": "changeset version"
+    "test": "vitest"
   },
   "dependencies": {
     "pretty-cache-header": "^1.0.0",
     "zod": "^3.22.0"
   },
   "devDependencies": {
-    "@changesets/cli": "^2.27.12",
-    "@types/node": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "eslint": "^8.0.0",
-    "prettier": "^2.8.0",
-    "tsx": "^4.7.0",
-    "typescript": "^4.9.0",
-    "vitest": "^1.0.0"
+    "@types/node": "18.0.0",
+    "tsx": "4.7.0",
+    "typescript": "4.9.5",
+    "vitest": "2.0.3"
   },
-  "packageManager": "pnpm@10.20.0",
   "publishConfig": {
     "access": "restricted"
   }
