--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -2,16 +2,13 @@
   "name": "@vercel/config",
   "version": "0.0.23",
   "description": "A TypeScript SDK for programmatically configuring Vercel projects",
-  "bugs": {
-    "url": "https://github.com/vercel/vercel/issues"
-  },
+  "license": "MIT",
+  "homepage": "https://vercel.com/docs/projects/project-configuration",
   "repository": {
     "type": "git",
     "url": "https://github.com/vercel/vercel.git",
     "directory": "packages/config"
   },
-  "author": "Vercel",
-  "license": "MIT",
   "main": "dist/v1/index.js",
   "types": "dist/v1/index.d.ts",
   "typesVersions": {
@@ -39,17 +36,20 @@
   "scripts": {
     "build": "tsc",
     "generate-types": "tsx scripts/generate-types.ts",
-    "test": "vitest"
+    "vitest-run": "vitest -c ../../vitest.config.mts",
+    "vitest-unit": "glob --absolute 'src/**/*.test.ts'",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "pretty-cache-header": "^1.0.0",
     "zod": "^3.22.0"
   },
   "devDependencies": {
-    "@types/node": "18.0.0",
+    "@types/node": "14.18.33",
     "tsx": "4.7.0",
     "typescript": "4.9.5",
-    "vitest": "2.0.3"
+    "vite": "^5.1.6",
+    "vitest": "^2.0.1"
   },
   "publishConfig": {
     "access": "public"
