--- a/packages/python/package.json
+++ b/packages/python/package.json
@@ -6,6 +6,7 @@
   "homepage": "https://vercel.com/docs/runtimes#official-runtimes/python",
   "files": [
     "dist",
+    "lib",
     "vc_init.py",
     "vc_init_dev_asgi.py",
     "vc_init_dev_wsgi.py"
