--- a/packages/ruby/package.json
+++ b/packages/ruby/package.json
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "build": "node ../../utils/build-builder.mjs",
-    "test": "echo 'Temporarily skipping ruby tests'",
+    "test": "jest --reporters=default --reporters=jest-junit --env node --verbose --runInBand --bail",
     "test-e2e": "pnpm test",
     "type-check": "tsc --noEmit"
   },
