--- a/packages/python/package.json
+++ b/packages/python/package.json
@@ -8,7 +8,8 @@
     "dist",
     "vc_init.py",
     "vc_init_dev_asgi.py",
-    "vc_init_dev_wsgi.py"
+    "vc_init_dev_wsgi.py",
+    "vc_meta_app.py"
   ],
   "repository": {
     "type": "git",
