Apply suggestion from @vercel[bot]
Co-authored-by: vercel[bot] <35613825+vercel[bot]@users.noreply.github.com>

--- a/.github/workflows/test-nightly.yml
+++ b/.github/workflows/test-nightly.yml
@@ -139,7 +139,7 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
           # Create branch and add notice file
-          git checkout -b "$BRANCH_NAME"
+          git checkout -B "$BRANCH_NAME"
 
           cat > NIGHTLY_TEST_FAILURE.md << EOF
           # 🚨 Nightly Test Failure Notice
