--- a/packages/backends/package.json
+++ b/packages/backends/package.json
@@ -31,8 +31,7 @@
     "@vercel/nft": "1.1.1",
     "@vercel/static-config": "workspace:*",
     "@vercel/introspection": "workspace:*",
-    "fs-extra": "11.1.0",
-    "rolldown": "1.0.0-beta.35"
+    "fs-extra": "11.1.0"
   },
   "devDependencies": {
     "@types/express": "5.0.3",
