--- a/examples/koa/package.json
+++ b/examples/koa/package.json
@@ -2,11 +2,10 @@
   "name": "koa",
   "type": "module",
   "dependencies": {
-    "koa": "^2.15.0"
+    "koa": "3.1.1"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
-    "@types/koa": "^2.15.0",
     "typescript": "^5.8.3"
   }
 }
