--- a/packages/cervel/package.json
+++ b/packages/cervel/package.json
@@ -35,8 +35,7 @@
     "execa": "3.2.0",
     "rolldown": "1.0.0-beta.59",
     "srvx": "0.8.9",
-    "tsx": "4.19.2",
-    "esbuild": "0.27.0"
+    "tsx": "4.21.0"
   },
   "peerDependencies": {
     "typescript": "^4.0.0 || ^5.0.0"
