--- a/.github/workflows/test-nightly.yml
+++ b/.github/workflows/test-nightly.yml
@@ -4,13 +4,13 @@ on:
   schedule:
     # Run at 10pm PST (6am UTC) every day
     # PST is UTC-8, so 10pm PST = 6am UTC next day
-    - cron: "0 6 * * *"
+    - cron: '0 6 * * *'
   workflow_dispatch: # Allow manual triggering
 
 env:
-  VERCEL_TELEMETRY_DISABLED: "1"
+  VERCEL_TELEMETRY_DISABLED: '1'
   # Disable turbo remote cache for nightly - we want fresh runs
-  TURBO_REMOTE_ONLY: "false"
+  TURBO_REMOTE_ONLY: 'false'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -80,7 +80,7 @@ jobs:
       - name: Build ${{matrix.packageName}} and all its dependencies
         run: node utils/gen.js && node_modules/.bin/turbo run build --force --log-order=stream --filter=${{matrix.packageName}}...
         env:
-          FORCE_COLOR: "1"
+          FORCE_COLOR: '1'
       - name: Test ${{matrix.packageName}}
         run: node utils/gen.js && node_modules/.bin/turbo run ${{matrix.testScript}} --force --summarize --log-order=stream --filter=${{matrix.packageName}} -- ${{ join(matrix.testPaths, ' ') }}
         shell: bash
@@ -89,10 +89,10 @@ jobs:
           VERCEL_CLI_VERSION: ${{ needs.setup.outputs.dplUrl }}/tarballs/vercel.tgz
           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
           VERCEL_TEAM_ID: ${{ secrets.VERCEL_TEAM_ID }}
-          FORCE_COLOR: "1"
-      - name: "Upload Test Report to Datadog"
+          FORCE_COLOR: '1'
+      - name: 'Upload Test Report to Datadog'
         if: ${{ !cancelled() }}
-        run: "pnpm dlx @datadog/datadog-ci@4.2.2 junit upload --service vercel-cli .junit-reports"
+        run: 'pnpm dlx @datadog/datadog-ci@4.2.2 junit upload --service vercel-cli .junit-reports'
         env:
           DATADOG_API_KEY: ${{secrets.DATADOG_API_KEY_CLI}}
           DD_ENV: ci
