--- a/packages/python-analysis/package.json
+++ b/packages/python-analysis/package.json
@@ -4,6 +4,9 @@
   "main": "./dist/index.js",
   "license": "Apache-2.0",
   "homepage": "https://vercel.com/docs/runtimes#official-runtimes/python",
+  "publishConfig": {
+    "access": "public"
+  },
   "files": [
     "dist"
   ],
