--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -11,6 +11,11 @@
     "url": "https://github.com/vercel/vercel.git",
     "directory": "packages/cli"
   },
+  "exports": {
+    ".": "./dist/index.js",
+    "./vc": "./dist/vc.js",
+    "./package.json": "./package.json"
+  },
   "scripts": {
     "test": "jest --reporters=default --reporters=jest-junit --env node --verbose --bail",
     "vitest-run": "vitest --config ./vitest.config.mts",
