Add zero-config support for koa (#14567)

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -47,6 +47,7 @@
     "@vercel/h3": "workspace:*",
     "@vercel/hono": "workspace:*",
     "@vercel/hydrogen": "workspace:*",
+    "@vercel/koa": "workspace:*",
     "@vercel/nestjs": "workspace:*",
     "@vercel/next": "workspace:*",
     "@vercel/node": "workspace:*",
