--- a/packages/go/package.json
+++ b/packages/go/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "build": "node ../../utils/build-builder.mjs",
     "test": "jest --reporters=default --reporters=jest-junit --env node --verbose --runInBand --bail",
-    "test-e2e": "echo 'Go e2e tests temporarily disabled'",
+    "test-e2e": "pnpm test",
     "type-check": "tsc --noEmit"
   },
   "files": [
