--- a/packages/python/test/fixtures/40-arbitrary-entrypoint/pyproject.toml
+++ b/packages/python/test/fixtures/40-arbitrary-entrypoint/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "vercel-flask"
 version = "0.1.0"
-requires-python = "==3.12"
+requires-python = ">=3.12"
 dependencies = [
   "flask>=3.1",
 ]
