--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "devDependencies": {
     "@changesets/cli": "2.27.8",
     "@svitejs/changesets-changelog-github-compact": "1.1.0",
-    "@types/node": "14.18.33",
+    "@types/node": "20.11.0",
     "@typescript-eslint/eslint-plugin": "5.21.0",
     "@typescript-eslint/parser": "5.21.0",
     "@vercel/build-utils": "*",
@@ -32,6 +32,7 @@
     "npm-package-arg": "6.1.0",
     "prettier": "3.3.3",
     "source-map-support": "0.5.12",
+    "syncpack": "13.0.4",
     "tmp-promise": "1.0.3",
     "ts-eager": "2.0.2",
     "ts-jest": "29.1.5",
