--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -10,6 +10,9 @@
 /packages/static-build                   @vercel/ci-cd
 /packages/edge                           @vercel/ci-cd @vercel/compute
 /packages/functions                      @vercel/ci-cd @vercel/compute @kldavis4
+/packages/rust                           @vercel/ci-cd @vercel/compute @ecklf
+/crates                                  @vercel/ci-cd @vercel/compute @ecklf
+/Cargo.*                                 @vercel/ci-cd @vercel/compute @ecklf
 /packages/firewall                       @vercel/ci-cd @cramforce @sueplex @quuu @ctgowrie
 /packages/mcp-adapter                    @vercel/ci-cd @cramforce @quuu
 /examples/create-react-app               @vercel/ci-cd @Timer
