Prefer .python-version for selecting lambda runtime when it exists.
Signed-off-by: gscho <greg.c.schofield@gmail.com>

--- a/packages/python/test/fixtures/46-python313/pyproject.toml
+++ b/packages/python/test/fixtures/46-python313/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "fixture-python313"
 version = "0.0.1"
-requires-python = "==3.13.*"
+requires-python = ">=3.12"
 dependencies = [
   "fastapi",
 ]
