--- a/packages/cervel/package.json
+++ b/packages/cervel/package.json
@@ -32,7 +32,7 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@vercel/build-utils": "13.2.16",
+    "@vercel/build-utils": "workspace:*",
     "@vercel/nft": "1.3.0",
     "execa": "3.2.0",
     "nf3": "0.3.6",
