--- a/packages/introspection/package.json
+++ b/packages/introspection/package.json
@@ -14,7 +14,9 @@
     },
     "./loaders/cjs": "./dist/loaders/cjs.js",
     "./loaders/esm": "./dist/loaders/esm.js",
-    "./loaders/hooks": "./dist/loaders/hooks.js"
+    "./loaders/hooks": "./dist/loaders/hooks.js",
+    "./loaders/rolldown-esm": "./dist/loaders/rolldown-esm.js",
+    "./loaders/rolldown-hooks": "./dist/loaders/rolldown-hooks.js"
   },
   "repository": {
     "type": "git",
@@ -31,24 +33,11 @@
     "dist"
   ],
   "dependencies": {
-    "path-to-regexp": "8.3.0",
-    "zod": "3.22.4"
+    "@vercel/backends": "workspace:*"
   },
   "devDependencies": {
-    "@types/express": "5.0.3",
-    "@types/fs-extra": "11",
-    "@types/jest": "27.5.1",
-    "@vercel/cervel": "workspace:*",
-    "@vercel/static-config": "workspace:*",
-    "@vercel/nft": "1.1.1",
     "@types/node": "20.11.0",
-    "fs-extra": "11.1.0",
-    "@vercel/build-utils": "workspace:*",
-    "execa": "3.2.0",
-    "hono": "4.10.1",
-    "jest-junit": "16.0.0",
     "tsdown": "0.16.3",
-    "vite": "^5.1.6",
     "vitest": "^2.0.1"
   }
 }
