--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -60,7 +60,8 @@
     "chokidar": "4.0.0",
     "esbuild": "0.27.0",
     "form-data": "^4.0.0",
-    "jose": "5.9.6"
+    "jose": "5.9.6",
+    "path-to-regexp": "6.1.0"
   },
   "devDependencies": {
     "@alex_neo/jest-expect-message": "1.0.5",
