chore(cli): fix deprecations

--- a/packages/go/tsconfig.json
+++ b/packages/go/tsconfig.json
@@ -1,7 +1,12 @@
 {
   "compilerOptions": {
     "outDir": "./dist",
-    "types": ["node", "jest"]
+    "types": ["node", "jest"],
+    "skipLibCheck": true,
+    "baseUrl": ".",
+    "paths": {
+      "tar": ["./src/tar.d.ts"]
+    }
   },
   "extends": "../../tsconfig.base.json",
   "include": ["src/**/*"]
