fix(eslint): exclude blob/store.ts from permissive rule (it's a router)

--- a/package.json
+++ b/package.json
@@ -125,7 +125,8 @@
           "packages/cli/src/commands/**/*"
         ],
         "excludedFiles": [
-          "**/index.ts"
+          "**/index.ts",
+          "**/blob/store.ts"
         ],
         "rules": {
           "no-restricted-syntax": [
