--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -26,7 +26,7 @@
     "@vercel/nft": "1.1.1"
   },
   "devDependencies": {
-    "@next-community/adapter-vercel": "https://adapter-vercel-adapt-git-4964fc-vtest314-next-adapter-e2e-tests.vercel.app/adapter.tgz",
+    "@next-community/adapter-vercel": "0.0.1-beta.6",
     "@types/aws-lambda": "8.10.19",
     "@types/buffer-crc32": "0.2.0",
     "@types/bytes": "3.1.1",
