--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,6 @@ __pycache__
 turbo-cache-key.json
 junit.xml
 **/target/
+# CLI "target" subcommand (e.g. vercel target list) is source, not build output
+!packages/cli/src/commands/target/
+!packages/cli/src/commands/target/**
