--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,6 @@ junit.xml
 # CLI "target" subcommand (e.g. vercel target list) is source, not build output
 !packages/cli/src/commands/target/
 !packages/cli/src/commands/target/**
+# CLI target command tests
+!packages/cli/test/unit/commands/target/
+!packages/cli/test/unit/commands/target/**
