Replace regex templating with mustache.js.
Signed-off-by: gscho <greg.c.schofield@gmail.com>

--- a/packages/python/package.json
+++ b/packages/python/package.json
@@ -26,9 +26,11 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@vercel/python-analysis": "workspace:*"
+    "@vercel/python-analysis": "workspace:*",
+    "mustache": "4.2.0"
   },
   "devDependencies": {
+    "@types/mustache": "4.2.5",
     "@renovatebot/pep440": "4.2.1",
     "@types/execa": "^0.9.0",
     "@types/fs-extra": "11.0.2",
