--- a/packages/python/package.json
+++ b/packages/python/package.json
@@ -21,13 +21,10 @@
     "test-unit": "vitest run --config ../../vitest.config.mts test/unit.test.ts",
     "test-e2e": "pnpm test test/integration-*",
     "vitest-run": "vitest -c ../../vitest.config.mts",
-    "vitest-unit": "glob --absolute 'test/unit.test.ts'",
-    "type-check": "tsc --noEmit"
-  },
-  "dependencies": {
-    "@vercel/python-analysis": "workspace:*"
+    "vitest-unit": "glob --absolute 'test/unit.test.ts'"
   },
   "devDependencies": {
+    "@vercel/python-analysis": "workspace:*",
     "@renovatebot/pep440": "4.2.1",
     "@types/execa": "^0.9.0",
     "@types/fs-extra": "11.0.2",
