--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -60,7 +60,8 @@
     "chokidar": "4.0.0",
     "esbuild": "0.27.0",
     "form-data": "^4.0.0",
-    "jose": "5.9.6"
+    "jose": "5.9.6",
+    "luxon": "3.7.2"
   },
   "devDependencies": {
     "@alex_neo/jest-expect-message": "1.0.5",
@@ -158,7 +159,6 @@
     "jsonlines": "0.1.1",
     "line-async-iterator": "3.0.0",
     "load-json-file": "3.0.0",
-    "luxon": "3.7.2",
     "memfs": "4.14.0",
     "mime-types": "2.1.24",
     "minimatch": "3.1.2",
