--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -42,7 +42,8 @@
     "chokidar": "4.0.0",
     "esbuild": "0.27.0",
     "form-data": "^4.0.0",
-    "jose": "5.9.6"
+    "jose": "5.9.6",
+    "luxon": "^3.4.0"
   },
   "peerDependencies": {
     "@vercel/backends": "workspace:*",
