--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -43,7 +43,7 @@
     "esbuild": "0.27.0",
     "form-data": "^4.0.0",
     "jose": "5.9.6",
-    "luxon": "^3.4.0"
+    "luxon": "^3.4.0",
     "proxy-agent": "6.4.0"
   },
   "peerDependencies": {
