--- a/packages/evals/evals/marketplace/install-neon-postgres-minimal/package.json
+++ b/packages/evals/evals/marketplace/install-neon-postgres-minimal/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "devDependencies": {
     "@types/node": "^22.0.0",
+    "@vercel/sdk": "^1.18.0",
     "vitest": "^2.0.0"
   }
 }
