--- a/packages/evals/package.json
+++ b/packages/evals/package.json
@@ -6,7 +6,7 @@
   "devDependencies": {
     "@vercel/agent-eval": "^0.7.0",
     "@vercel/sdk": "^1.18.0",
-    "@types/node": "^22.0.0",
+    "@types/node": "20.11.0",
     "typescript": "^5.6.0",
     "vitest": "^2.1.0"
   }
