--- a/packages/evals/evals/marketplace/install-neon-postgres/package.json
+++ b/packages/evals/evals/marketplace/install-neon-postgres/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "private": true,
   "devDependencies": {
-    "@types/node": "^22.0.0",
+    "@types/node": "20.11.0",
     "@vercel/sdk": "^1.18.0",
     "vitest": "^2.0.0"
   }
