--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -14,6 +14,7 @@
   "updateInternalDependencies": "patch",
   "ignore": [
     "api",
+    "evals",
     "examples",
     "@vercel-internals/*"
   ],
